@@ -35,7 +35,7 @@ RUBY_EXTERN const char *ruby_copyright;
 #define _mbari_rev_ "mbari"
 #endif
 
-#define MBARI_RELEASE(wipe_sites) _mbari_rev_ " 7A/" string_arg(wipe_sites)
+#define MBARI_RELEASE(wipe_sites) _mbari_rev_ " 8A/" string_arg(wipe_sites)
 
 #define RUBY_RELEASE_STR MBARI_RELEASE(STACK_WIPE_SITES) " on patchlevel"
 #define RUBY_RELEASE_NUM RUBY_PATCHLEVEL
