@@ -1635,6 +1635,14 @@ Wed Feb 25 14:57:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 	* win32/win32.c (winnt_stat): gets rid of strange behavior of
 	  GetFileAttributes().  [ruby-core:21269]
 
+Tue Feb 25 00:01:19 2009  Brent Roman  <brent@mbari.org>
+
+        * gc.c:  default GC.limit is now 2e6*sizeof(VALUE)
+        
+        * eval.c:  added RB_GC_GUARDs to eval_slit(), more volatile tweaks
+        
+        * version.h:  bumped date, MBARI version 7A --> 8A
+
 Tue Feb 24 02:44:39 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
 
 	* lib/erb.rb (PercentScanner): remove PercentScanner. fixed % after
